--- a/arch/arm64/configs/a02q_cis_open_defconfig
+++ b/arch/arm64/configs/a02q_cis_open_defconfig
@@ -576,7 +576,8 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE_EXTEND=y
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
 CONFIG_DMI=y
@@ -5108,9 +5109,9 @@ CONFIG_SECURITY_SMACK=y
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_LOADPIN is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_INTEGRITY=y
+CONFIG_INTEGRITY=n
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+CONFIG_INTEGRITY_AUDIT=n
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 # CONFIG_SECURITY_DSMS is not set
