--- a/arch/arm64/configs/a02q_cis_open_defconfig
+++ b/arch/arm64/configs/a02q_cis_open_defconfig
@@ -229,12 +229,14 @@ CONFIG_SYSTEM_DATA_VERIFICATION=y
 # CONFIG_DEFERRED_INITCALLS is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
+CONFIG_KSU_MANUAL_HOOK=y
+CONFIG_KSU=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_UPROBES is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_HAVE_KPROBES=y
+CONFIG_HAVE_KPROBES=n
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_ARCH_TRACEHOOK=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
